Modificaciones de imagen

--- a/css/salida-texto.css
+++ b/css/salida-texto.css
@@ -50,7 +50,7 @@
     
     @media  screen and (min-width:768px) {
         .texto__salida--texto--textarea{
-            background-image: url(/muñeco_texto.png);
+            background-image: url(/imagenes/muñeco_texto.png);
             width: 400px;
             height: 20rem;
         }
